<resources>
    <string name="app_name">Avoid_Obstacles</string>
    <string name="default_str" />
    <string name="right">R</string>
    <string name="left">L</string>
    <string name="Left">L</string>
    <string name="Right">R</string>
    <string name="default_text">000</string>
    <string name="game_name">CHASE DOWN</string>
    <string name="fast">Fast</string>
    <string name="normal">Normal</string>
    <string name="sensors">Sensor</string>
    <string name="buttons">Button</string>
    <string name="play">Play</string>
    <string name="record_table">Record Table 🏆</string>
    <string name="replay">Replay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table_of_records">Table of records</string>
</resources>